[package]
name = "src"
version = "0.1.0"
edition = "2021"

[lib]
name = "financial_analysis"
path = "src/lib.rs"

[[bin]]
name = "financial_analysis"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0.133"

